# rag-sample

./: .gitignore  main.py  pyproject.toml
scripts/: index_generator.py
views/: ask.html  root.html
